# PRACTICA_4_MArtin_Pe-alva

./: README.md
Practica4/: .gitignore  EJECUCION.md  info.html  run_client.ps1
Practica4/cpp_client/: CMakeLists.txt
Practica4/cpp_client/include/: http_client.h  interpolation.h  tactile_json.h  types.h
Practica4/cpp_client/src/: http_client.cpp  interpolation.cpp  main.cpp  tactile_json.cpp
Practica4/py_server/: requirements.txt  server.py
